--- a/Thinking in Java/一.对象导论.md
+++ b/Thinking in Java/一.对象导论.md
@@ -1,6 +1,6 @@
-# 1.对象导论
+# 1. 对象导论
 
-## 1.1抽象过程
+## 1.1 抽象过程
 
 1. 面向对象的语言有五个特点
 
@@ -18,18 +18,101 @@
 
       <!--父类几何体，子类圆形、正方形，子类对象都能收到几何体类型的信息-->
 
-## 1.2每个对象都有一个接口
+## 1.2 每个对象都有一个接口
+
+1. 发送消息（产生请求）：当向对象发送请求时，相关联的方法就会被调用
 
 > 每个对象都是定义了特性和行为的某个特定的类
 
-## 1.3每个对象都提供服务
+## 1.3 每个对象都提供服务
 
 > 把对象看成服务提供者，有利于形成对象的高内聚
 
-## 1.4被隐藏的具体实现
+## 1.4 访问指定词
+
+<!--被隐藏的具体实现-->
 
 1. 访问指定词
    - public：任何人都能访问
    - private：仅类型的创建者和类型内部方法能够使用
    - protected：除类型的创建者和类型内部方法能够使用；继承的类也能访问（与private的区别）
    - 默认（包访问权限）：同一个包中的能够访问
+
+## 1.5 复用具体实现
+
+1. 组合：使用现有的类合成新的类，经常被视为（has-a）拥有关系
+2. 聚合：动态发生的组合
+
+## 1.6 继承
+
+1. 定义：以现有类为基础，复制出副本，并在副本上修改和添加来创建新类
+   - 现有类称为基类、源类、父类
+   
+- 副本类称为导出类、继承类、子类
+   
+   - **通过继承产生的类型具有类型等价性**
+   
+     <!--发给基类对象的消息同时也能发给导出类-->
+   
+2. 使基类和导出类差异的两个方法
+
+   - 在导出类添加新方法
+   - 在导出类中改变基类的方法（简称覆盖）
+
+### 1.6.1 继承的分类
+
+1. 纯粹替代（也称替代原则）：用一个导出类对象来完全替代一个基类对象
+2. 不完全替代：在导出类中扩展接口，但基类无法访问新添加的方法
+
+
+
+## 1.7 多态
+
+1. 泛化：处理类型的层次结构时，不把对象当作特定类型处理，而是作为基类的对象处理
+
+   <!--比如处理三角形、圆形、矩形，不作为特殊类处理，而是统一看成形状，因为都有绘制、移动等方法-->
+
+   > 面向对象程序设计的最重要妙诀：编译器不可能产生传统意义上的函数调用，而是采用前期绑定和后期绑定的方法
+
+2. 后期绑定：向对象发送消息时，被调用的代码直到运行时才能确定；再运行前，编译器仅仅确认调用方法的存在、被调用参数和返回值类型检查
+
+   > **由于OOP中，动态绑定是默认行为，所以程序直到运行时才确定代码的位置；根据消息来确定具体调用的代码，因此是动态的**
+
+3. 多态：同一事物在不同场景下的多种形态
+
+   - 由于动态绑定是默认行为，所以在运行前无法确定调用的代码，因此根据消息来执行后期绑定，实现多态
+
+     <!--示例代码-->
+
+     **当draw()消息发到一个匿名Shape时，会基于该Shape的实际类型产生正确的行为**
+
+     ```java
+     void doSomething(Shape shape){
+     	shape.draw();
+       shape.rease();
+     }
+     ```
+
+     ```java
+     Circle circle = new Circle();
+     Triangle triangle = new Triangle();
+     Line line = new Line();
+     doSomething(circle);
+     doSomething(triangle);
+     doSomething(line);
+     ```
+
+     
+
+
+
+
+
+
+
+
+
+
+
+
+
