--- a/Thinking in Java/一.对象导论.md
+++ b/Thinking in Java/一.对象导论.md
@@ -49,7 +49,7 @@
    - 现有类称为基类、源类、父类
    
 - 副本类称为导出类、继承类、子类
-   
+  
    - **通过继承产生的类型具有类型等价性**
    
      <!--发给基类对象的消息同时也能发给导出类-->
@@ -104,7 +104,12 @@
 
      
 
+## 1.9单根继承结构
 
+1. 单根继承：所有类最终都继承自单一的基类
+2. 优势
+   - 保证所有对象一定具备某些功能，方便执行基本操作
+   - 方便垃圾回收，因为所有对象都能确定类型
 
 
 
