--- a/Thinking in Java/一.对象导论.md
+++ b/Thinking in Java/一.对象导论.md
@@ -104,17 +104,32 @@
 
      
 
-## 1.9单根继承结构
+## 1.8单根继承结构
 
 1. 单根继承：所有类最终都继承自单一的基类
 2. 优势
    - 保证所有对象一定具备某些功能，方便执行基本操作
    - 方便垃圾回收，因为所有对象都能确定类型
 
+## 1.9容器
 
+1. 实际开发中，需要选择合适容器，原因为
+   - 不同容器有各自的接口和行为
+   - 不同容器效率不同
 
+### 1.9.1参数化类型
 
+1. 范型：参数化类型，使用一对尖括号，中间包含类型信息
 
+   ```java
+   ArrayList<Shape> shapes = new ArrayList<Shape>();
+   ```
+
+2. 向下转型：向下转型成为更加具体的类
+
+   - 向下转型的行为存在风险，会出现异常
+
+   <!--比如：Circle是Shape的一个类，但是无法得知某个Object是Shape类还是Circle类-->
 
 
 
