--- a/Thinking in Java/一.对象导论.md
+++ b/Thinking in Java/一.对象导论.md
@@ -133,6 +133,36 @@
 
 
 
+## 1.10对象的创建和生命周期
+
+1. 对象的存储
+   - 对象置于堆栈或静态存储区域来实现：牺牲灵活性，存储空间分配优先考虑
+   - 在堆（heap）的内存池中动态的创建对象：保证灵活性，但直到运行时才知道对象数量
+   - Java采用动态内存分配方式
+2. 对象的生命周期
+   - java有垃圾回收器，因此能够自动释放对象占用的内存
+   - C++需要手动销毁对象，不然可能导致内存泄漏
 
 
 
+## 1.11异常处理：处理错误
+
+> 异常处理提供了一种从错误状态进行可靠恢复的途径
+
+
+
+## 1.12并发编程
+
+1. 线程：彼此独立运行的部分
+2. 并发：多个线程同时运行
+
+## 1.13Java与Internet
+
+### 1.13.1Web
+
+1. 服务器：信息存储池、用于分发信息的软件以及信息和软件所驻留的机器或机群
+
+### 1.13.2客户端编程
+
+1. 通用网关接口（CGI）：数据表单的提交通过CGI传递
+2. 插件（plug-in）：下载一段代码，插入到浏览器中适当位置，来扩展浏览器功能
