--- a/Thinking in Java/三.操作符.md
+++ b/Thinking in Java/三.操作符.md
@@ -90,7 +90,9 @@ public class TestPrint {
 
     - 第一次赋值是将t2的指向修改为与t1一致，同时指向同一个对象，因为t1和t2都是引用
 
-    ![](/Users/toyz/Package/Note/Thinking in Java/别名现象解析.png)
+    - 第二次赋值是将t1和t2指向的同一个对象中的level值修改了
+
+      ![](/Users/toyz/Package/Note/Thinking in Java/别名现象解析-3091274.png)
 
 ## 3.5 算术操作符
 
@@ -235,4 +237,52 @@ public class TestPrint {
     ```
 
 ## 3.7 关系操作符
+
+- 分类
+  - 大于、小于、大于等于、小于等于、等于(==)、不等于(!=)
+  - 等于和不等于适用所有基本数据类型，其他比较符不使用boolean类型
+
+### 3.7.1 对象的等价性
+
+- ==和!=比较的是对象的引用 <!--即使对象的内容相同，两个对象的引用也不同-->
+
+  ```java
+  package com.five;
+  public class TestEquals {
+      public static void main(String[] args) {
+        // n1和n2指向两个对象，两个对象内容相同
+          Integer n1 = new Integer(47);
+          Integer n2 = new Integer(47);
+          System.out.println(n1 == n2);
+          System.out.println(n1 != n2);
+      }
+  }
+  /* output
+  false
+  true
+  */
+  // /Users/toyz/Package/Note/Thinking in Java/Practice/Operators/src/com/five/TestEquals.java
+  ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
