--- a/Thinking in Java/三.操作符.md
+++ b/Thinking in Java/三.操作符.md
@@ -248,23 +248,46 @@ public class TestPrint {
 
   ```java
   package com.five;
+  
   public class TestEquals {
       public static void main(String[] args) {
-        // n1和n2指向两个对象，两个对象内容相同
+          // 使用==比较 基本数据类的相同内容的不同对象
           Integer n1 = new Integer(47);
           Integer n2 = new Integer(47);
+          System.out.print("使用==比较 相同内容的不同对象:");
           System.out.println(n1 == n2);
-          System.out.println(n1 != n2);
+  
+          // 使用equals比较 基本数据类的相同内容的不同对象
+          System.out.print("使用equals比较 相同内容的不同对象:");
+          System.out.println(n1.equals(n2));
+  
+          // 使用==比较 自定义类的相同内容的不同对象
+          Dog dog1 = new Dog();
+          dog1.setName("spot");
+          dog1.setSays("Ruff!");
+          Dog dog2 = new Dog();
+          dog2.setName("spot");
+          dog2.setSays("Ruff!");
+          System.out.print("使用==比较 自定义类的相同内容的不同对象:");
+          System.out.println(dog1 == dog2);
+  
+          // 使用equals比较 自定义类的相同内容的不同对象
+          System.out.print("使用equals比较 相同内容的不同对象:");
+          System.out.println(dog1.equals(dog2));
       }
   }
   /* output
-  false
-  true
+  使用==比较 相同内容的不同对象:false
+  使用equals比较 相同内容的不同对象:true
+  使用==比较 自定义类的相同内容的不同对象:false
+  使用equals比较 相同内容的不同对象:false
   */
   // /Users/toyz/Package/Note/Thinking in Java/Practice/Operators/src/com/five/TestEquals.java
   ```
 
-
+- 总结
+  - == 对于基本数据类型，是比较值；对于引用数据类型，是比较地址
+  - equals 对于引用的基本数据类型的比较生效，适合比较对象内容，而非比较对象的引用 <!--default-->
 
 
 
