--- a/Thinking in Java/三.操作符.md
+++ b/Thinking in Java/三.操作符.md
@@ -289,6 +289,197 @@ public class TestPrint {
   - == 对于基本数据类型，是比较值；对于引用数据类型，是比较地址
   - equals 对于引用的基本数据类型的比较生效，适合比较对象内容，而非比较对象的引用 <!--default-->
 
+## 3.8 逻辑操作符
+
+- 分类
+  - 与（&&）、或（||）、非（!）
+  - 以上三种只能应用于布尔值
+  - 在String值的地方使用布尔值，布尔值会自动转换成适当的文本
+
+
+
+### 3.8.1 短路
+
+- 定义：当能够确定一个表达式的值，就不计算余下的部分
+
+- 演示过程：当判断到(j<2)时为false时，程序不会执行后续判断，直接输出false
+
+  ```java
+  package com.seven;
+  import static util.Print.*;
+  public class ShortCircuit {
+      public static void main(String[] args) {
+          int i = 1;
+          int j = 2;
+          int k = 3;
+          print("res:"+((i<2)&&(j<2)&&(k<2)));
+      }
+  }	
+  ```
+
+## 3.9 直接常量
+
+> 直接常量的后缀字符标注了类型
+
+- 常用类型
+  - L代表long
+  - F代表Float
+  - D代表Double
+  - 十六进制数字：以前缀0x，后面跟随0～9或小写的a～f来表示
+  - 八进制数字：以前缀0，后面跟随0～7数字来表示
+
+### 3.9.1 指数计数法
+
+> 程序设计时使用e代表“10的幂次”，但是在科学和工程领域，e代表自然对数的基数
+
+## 3.10 按位操作符
+
+- 运算方式
+  - &、|、^、~
+  - 与、或、异或、取反
+  - **异或：相同则为零，不同则为1 <!--比如两个开关控制一个灯，1为开，0为关。当两个开关都为关，则关，两个开关都为开则关，两个开关一个开则为开-->**
+
+- 运算规则
+  1. &:  1&1=1 , 1&0=0 , 0&1=0 , 0&0=0
+  2. |: 1|1=1 , 1|0=1 , 0|1=1 , 0|0=0
+  3. ^: 1^1=0 , 1^0=1 , 0^1=1 , 0^0=1
+  4. ~: ~1=0 , ~0=1
+
+- 进制运算
+  1. **二进制转为十六进制：小数点左边向左开始，右边向右开始，各取4位，不足的向左（向右）补零**
+     1. 二进制：010101 —— 十六进制：15
+     2. 第一步：二进制分为：01，0101
+     3. 第二步：补全：0001，0101
+     4. 第三步：0001为1，0101为5（计算的时候要把顺序倒过来，0101看成1010计算）
+
+- 使用二进制表示负数
+
+  1. 获得原码:00101111
+
+  2. 获得反码:11010000
+
+  3. 获得补码(反码加一):11010001
+
+     <!--原码末尾为零，反码加一需要向前进位-->
+
+## 3.11 移位操作符
+
+- 左移操作符（<<）:操作数向左移动，低位补零
+- 右移操作符（>>）：操作数向右移动，当符号为正，高位补零；当符号为负，高位补1
+- 无符号右移操作符（>>>）：无论正负，都在高位插入零
+
+> byte和short类型使用位移运算时，会先转换成int类
+>
+
+## 3.12 三元操作符
+
+- if-else操作符，形式为boolean-eep ? value1 : value2
+
+  当结果为true时，就计算value1；当结果为false，就计算value2
+
+- 使用时需要注意可读性
+
+## 3.13 字符串操作符+和+=
+
+- 需要考虑计算的优先级
+
+```java
+package com.thirteen;
+
+import static util.Print.*;
+
+public class PrintString {
+    public static void main(String[] args) {
+        int x = 0 , y = 1 , z = 2;
+        String s = "x,y,z";
+        System.out.println(s+x+y+z);
+        System.out.println(s+(x+y+z));
+        System.out.println(x+y+z+s);
+        System.out.println(x+""+s);
+        System.out.println(""+x);
+        System.out.println(x+y+z);
+    }
+}/* output
+x,y,z012
+x,y,z3
+3x,y,z
+0x,y,z
+0
+3
+*/
+```
+
+## 3.15 类型转换操作符
+
+- 窄化转换：将能容纳更多信息的数据类型转化成无法容纳这么多信息的数据类型，存在风险
+- 扩展转换：新类型能够容纳更多信息，安全，不会造成任何信息的丢失
+
+> Java允许将任何基本数据类型转换成别的基本数据类型，但布尔类型不允许任何转换
+>
+> “类”数据类型不允许类型转换，除非使用特殊方法
+
+
+
+### 3.15.1 截尾和舍入
+
+- 截尾
+  1. float和double转换成整型
+
+- 舍入
+  1. 使用java.lang.Math中的round()方法
+
+### 3.15.2 提升
+
+> 表达式中的最大数据类型决定了表达式最终结果的数据类型 <!--比如，double乘以float，结果为double-->
+
+## 3.16 Java没有sizeof
+
+> 所有数据类型在所有机器中的大小都是相同的
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
