--- a/Thinking in Java/二. 一切都是对象.md
+++ b/Thinking in Java/二. 一切都是对象.md
@@ -66,21 +66,42 @@
    - BIgInteger：任意精度的整数
    - BigDecimal：任何精度的定点数 <!--可以用于精确的货币计算-->
    
-4. **自动包装功能**
+4. 自动装箱和自动拆箱
 
-   - 自动将基本类型转换成包装器类型
+   - 存储位置
 
+     ![](/Users/toyz/Package/Note/Thinking in Java/装箱与拆箱.png)
+   
+   - 演示
+   
      ```java
-     // 基本类型
-     Integer i = 5;
-     // 包装器类型
-     Integer i = new Integer(5);
-     /*
-     自动包装：基本类型的声明方式会自动转成包装器类型的声明方式
-     */
-     ```
-
+     public class Main {
+         public static void main(String[] args) {
+         // 自动装箱
+         Integer total = 99;
      
+         // 自动拆箱
+         int totalprim = total;
+         }
+     }
+     ```
+   
+   - 装箱：自动将基本数据类型转换成包装类，使用Integer.valueOf()方法，超过范围(-128至+128)则新建对象存储
+   
+     ```java
+     public static Integer valueOf(int i) {
+     	return  i >= 128 || i < -128 ? new Integer(i) : SMALL_VALUES[i + 128];
+     }
+     ```
+   
+   - 拆箱：自动将包装类转换成基本数据类型，使用intValue()方法
+   
+     ```java
+     @Override
+     public int intValue() {
+         return value;
+     }
+     ```
 
 ### 2.2.3 Java中的数组
 
