--- a/Thinking in Java/三.操作符.md
+++ b/Thinking in Java/三.操作符.md
@@ -104,8 +104,10 @@ public class TestPrint {
 
   - Random为生成伪随机数的类，使用nextInt()/nextFloat()方法获取随机数
 
-  - 如果种子参数相同，则生成的随机数也相同，见下方
+  - 产生随机小写字母的方法：Random.nextInt(26)+'a'
 
+  - 如果种子参数相同，则生成的随机数也相同，见下方
+  
     ```java
     package com.four;
     import java.util.Random;
@@ -123,9 +125,9 @@ public class TestPrint {
     /* output:
     i=-1157793070
     j=-1157793070
-    */
+  */
     ```
-
+  
     
 
 ### 3.5.2 一元加、减操作符
