--- a/Thinking in Java/四.控制执行流程.md
+++ b/Thinking in Java/四.控制执行流程.md
@@ -70,7 +70,7 @@
 - 结构
 
   ```java
-  for(initialization;Boolean expression;step)
+  label: for(initialization;Boolean expression;step)
   	statement
   ```
 
@@ -78,11 +78,191 @@
 
   - initialization;Boolean expression;step都可以为空
   - initialization仅首次生效
-  - 每次迭代都先测试Boolean expression，true后进行step，false则执行for后面语句
+  - **迭代先执行Boolean expression，true后执行statement，再执行step，此为一个循环；**
+  - **break是终止当前所在循环，continue是终止本次循环，重新进行下一次循环**
+  - **循环中的label标签，使得在循环嵌套中，break和continue退出到指定的循环，见Test**
 
+- Test
 
+  <!--使用循环嵌套和label标签实现输出100以内的素数-->
 
+  ```java
+  package four;
+  import static util.StaticPrint.*;
+  public class PrimeNumber {
+      public static void main(String[] args) {
+          outer:for (int i = 1 ; i < 100 ; i++ ){
+              inter:for (int j = 2 ; j < i ; j++ ){
+                  if ( i%j == 0){
+                    	// 退出到指定的循环
+                      continue outer; }
+                  }
+              print(i+"");
+          }
+      }
+  }
+  ```
 
+### 4.3.3 逗号操作符
+
+- 结构
+
+  ```java
+  for(int i = 1, j = 2 ; ;)
+  	statement
+  ```
+
+- 规则
+  - 仅在for循环的initialization中支持定义多个变量
+  - 变量的类型需要保持一致
+
+## 4.4 Foreach语法
+
+- 结构
+
+  ```java
+  for(type param : params)
+  	statement
+  ```
+
+- 规则
+  - 定义了type类型的变量param，然后将每一个params中的元素赋值给param
+
+- Test
+
+  ```java
+  package five;
+  import static util.StaticPrintnb.*;
+  public class TestForeach {
+      public static void main(String[] args) {
+          for (char c:"You konw what I mean".toCharArray()
+               ) {
+              printnb(c+"");
+          }
+      }
+  }
+  ```
+
+## 4.5 Reuturn
+
+- 用途
+  1. 指定返回值
+  2. 导致当前方法退出，并返回值；如果是多重循环，能够直接退出整个循环
+
+- 规则
+  - 如果一个方法声明它将返回void之外的内容，必须确保每个代码路径都有返回值
+
+- Test
+
+  <!--直接退出三层循环-->
+
+  ```java
+  package seven;
+  
+  public class TestReturn {
+      public static void main(String[] args) {
+          for(;;){
+              for (;;){
+                  for (int i = 0 ; i < 100 ; i++ ){
+                      System.out.println(i);
+                      return;
+                  }
+              }
+          }
+      }
+  }
+  ```
+
+  
+
+## 4.6 break and continue
+
+### 4.6.1 Break
+
+- 规则
+  - 强行退出循环，不执行循环中剩余的语句
+  - **不执行递增表达式，因此需要手动++**
+
+- GOTO用法
+  - **使用 break label，能够从任意循环终止指定的循环**
+
+### 4.6.2 Continue
+
+- 规则
+  - 停止执行当前迭代，退出到循环起始点
+  - **不执行递增表达式，因此需要手动++**
+
+- GOTO用法
+
+  - **使用 continue label，能够跳跃到任意循环的起始点**
+
+- Test
+
+  ```java
+  package four;
+  import static util.StaticPrint.*;
+  public class PrimeNumber {
+      public static void main(String[] args) {
+          outer:for (int i = 1 ; i < 100 ; i++ ){
+              inter:for (int j = 2 ; j < i ; j++ ){
+                  if ( i%j == 0){
+                    	// 退出到指定的循环
+                      continue outer; }
+                  }
+              print(i+"");
+          }
+      }
+  }
+  ```
+
+## 4.8 Switch
+
+- 简介
+
+  switch为选择语句
+
+- 结构
+
+  ```java
+  switch(integral-selector){
+    case integral-value1:statement;break;
+    case integral-value2:statement;break;
+    case integral-value3:statement;break;
+    case integral-value4:statement;break;
+    default:statement;
+  }
+  ```
+
+- 规则
+
+  - integral-selector和integral-value的值必须为int或char类型
+  - 匹配成功后，如果没有break会继续执行，直到遇到break或者default，因此后续所有值都会输出
+  -  case 语句块中没有 break 语句时，JVM 并不会顺序输出每一个 case 对应的返回值，而是继续匹配，匹配不成功则返回默认 case
+
+- Test
+
+  ```java
+  public class RunSwitch {
+      public static void main(String[] args) {
+          int i = 2;
+          switch (i){
+              case 0:
+                  System.out.println(0);
+              case 1:
+                  System.out.println(1);
+              case 2:
+                  System.out.println(2);
+              case 3:
+                  System.out.println(3);
+          }
+      }
+  }/* output
+  2
+  3
+  */
+  ```
+
+  
 
 
 
