--- a/Thinking in Java/七.复用类.md
+++ b/Thinking in Java/七.复用类.md
@@ -344,8 +344,16 @@
 > 组合是has关系，继承是is关系
 
 - 组合：新类中嵌入对象，让其实现所需要的功能。<!--比如房子有床、窗等对象组合而成-->
+
 - 继承：使用现有类，并开发一个特殊版本 <!--比如交通工具中，轿车是交通工具的特殊类-->
+
 - 判断方法：确认是否需要从新类向基类进行向上转型，如果是，则使用继承
+
+- 建议：优先使用组合，必要时使用继承，因为组合的灵活性更好。无论是子类继承父类方法，还是子类重写父类方法，都属于静态复用，无法在运行时改变
+
+  <!--比如，父类是去骑车天安门，子类重写父类方法为骑车去泰山，但是无法实现先骑车后开车去泰山-->
+
+  
 
 ## 7.6 protected 关键字
 
@@ -473,35 +481,39 @@
 
 - 规则
 
-  - 允许生成空白final，但是必须在定义处或者是构造方法中执行初始化
+  允许生成空白final，但是必须在定义处或者是构造方法中执行初始化
 
-    ```java
-    class BlankFinal{
-      final int i = 0;
-      final int k;
-      BlankFinal(){
-        k = 3;
-      }
+  ```java
+  class BlankFinal{
+    final int i = 0;
+    final int k;
+    BlankFinal(){
+      k = 3;
     }
-    ```
+  }
+  ```
 
 #### 2.final参数
 
 - 规则
 
-  - 在参数列表中以声明的方式将参数指明为final，表示无法更改参数引用所指向的对象
+  在参数列表中以声明的方式将参数指明为final，表示无法更改参数引用所指向的对象
 
-    ```java
-    class Gizmo{}
-    public class FinalArguments{
-    	void with(final Gizmo g)
-        // g = new Gizmo(); 这是非法的，因为无法更改参数引用指向的对象
-    }
-    ```
+  ```java
+  class Gizmo{}
+  public class FinalArguments{
+  	void with(final Gizmo g)
+      // g = new Gizmo(); 这是非法的，因为无法更改参数引用指向的对象
+  }
+  ```
 
 - 用途：向匿名内部类传递数据
 
 ### 7.8.2 final方法
+
+- 规则
+
+  当用final关键字修饰方法后，该方法在子类中将无法重写，只能继承
 
 - 用途
   - 防止继承类修改
@@ -509,43 +521,24 @@
 
 #### 1.final和private关键字
 
+> private默认是final的，在java的早期版本中使用private final来表达，从而提升性能。而在java2后，private默认也就是final的了，不需要在加上final的描述
 
+### 7.8.3 final类
 
+- 规则
 
+  无法被继承
 
+- 用途
 
+  final关键字将为这些方法提供安全，没有任何人能够重写final类中方法
 
+## 7.9 初始化及类的加载
 
+> 所有的static对象和代码段都会在加载时根据程序中的顺序（书写的顺序）初始化，且仅加载一次
+>
+> 类的代码只有在使用时才加载
 
+### 7.9.1 继承与初始化顺序总结
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+![](/Users/toyz/Package/Note/Thinking in Java/assets/继承与初始化顺序总结.png)
