--- a/Thinking in Java/六.访问权限控制.md
+++ b/Thinking in Java/六.访问权限控制.md
@@ -159,6 +159,9 @@ public static void print(Object obj){
     }
     ```
 
+- 注意点
+  - 基类中一个private方法，如果在导出类中也有“相同名称的方法”，则不能称为覆盖，而是视为导出类中生成了新的方法
+
 ### 6.2.3 protected：继承访问权限
 
 - 继承：利有现有类，也就是基类，将新成员添加到基类中而不需要修改基类的，还可以改变基类中现有成员的行为的方法
