--- a/Thinking in Java/七.复用类.md
+++ b/Thinking in Java/七.复用类.md
@@ -179,7 +179,7 @@
 
     ```java
     public class ClassC extends ClassA{
-    		// 对象类型的成员，仅定义，并没有初始化，因此不会调用构造方法
+    		// 对象类型的成员，仅创建引用，但是没有指向任何一个对象，因此不会发生实例化
         public ClassB classB;
         public static void main(String[] args) {
             ClassC classC = new ClassC();
@@ -445,7 +445,7 @@
        final static int d = 10;
        ```
 
-     - **final static在装载时已经初始化，因此新建对象时值已经确定;final 需要在新建对象时赋值，因此新建两个对象中的fi值不同**
+     - **final static在装载时已经初始化，并且仅初始化一次，因此新建对象时值已经确定;final 需要在新建对象时赋值，因此新建两个对象中的fi值不同**
 
        ```java
        public class TestFinalStatic {
