--- a/Thinking in Java/六.访问权限控制.md
+++ b/Thinking in Java/六.访问权限控制.md
@@ -134,7 +134,7 @@ public static void print(Object obj){
 
 - 规则
   
-- 除包含该成员的类之外，任何其他类都无法访问这个成员
+  除包含该成员的类之外，任何其他类都无法访问这个成员 <!--即使其他类中获取含有private方法的对象，该对象也无法调用private方法-->
   
 - 用途
 
@@ -160,6 +160,7 @@ public static void print(Object obj){
     ```
 
 - 注意点
+  
   - 基类中一个private方法，如果在导出类中也有“相同名称的方法”，则不能称为覆盖，而是视为导出类中生成了新的方法
 
 ### 6.2.3 protected：继承访问权限
