--- a/Thinking in Java/八.多态.md
+++ b/Thinking in Java/八.多态.md
@@ -149,13 +149,123 @@
 
 ### 8.3.2 继承和清理
 
+> 导出类在执行清理方法时，必须同时调用基类的清理方法
 
+### 8.3.3 构造器内部的多态方法的行为
 
+- 问题：在基类的构造器内部调用导出类中重写基类的动态方法，如果该动态方法操纵某个成员，则会出现该成员还未初始化就被调用的情况
 
+- 原因：**在任何事物之前，会将分配给对象的存储空间初始化为二进制的零**。这就是实现中，输出结果“Cat run i:0”为零的原因。
 
+- 实现
 
+  <!--基类-->
 
+  ```java
+  // base class
+  class Animal {
+      void run(){
+          print("Ani Run");
+      }
+      // 构造函数
+      Animal() {
+          print("Ani Con before run()");
+          // 多态，因此会调用导出类中的run方法
+          run();
+          print("Ani Con after run()");
+      }
+  }
+  ```
 
+  <!--导出类-->
 
+  ```java
+  class Cat extends Animal{
+      private int i = 1;
+  
+      Cat(int r) {
+          this.i = r;
+          print("Cat Con i:"+i);
+      }
+      @Override
+      void run(){
+          print("Cat run i:"+i);
+      }
+  }
+  
+  ```
 
+  <!--测试类-->
 
+  ```java
+  public class TestAC {
+      public static void main(String[] args) {
+          new Cat(5);
+      }
+  }/* output
+  Ani Con before run()
+  Cat run i:0
+  Ani Con after run()
+  Cat Con i:5
+  */
+  ```
+
+  ## 8.4 协变返回类型
+
+  > Java1.4以前，子类覆盖父类方法，必须方法名和返回值相同
+  >
+  > Java5.0之后，子类覆盖父类方法，保证方法名相同，返回值可以是父类的子类，可以使得返回值更加具体
+
+## 8.5 用继承进行设计
+
+> 用继承表达行为间的差异，并用字段表达状态上的变化
+
+- 解读：通过继承获得两个不同的类，用来表达共有方法的不同（两个导出类分别重写方法）。而运用组合来改变自身的状态（将成员赋值为不同的对象）。
+
+### 8.5.1 纯继承和扩展
+
+- 纯继承：基类中已经建立的方法被导出类中覆盖，导出类没有添加任何新方法
+- 扩展的缺陷：如果发生向上转型，则导出类中扩展的方法将无法使用
+
+### 8.5.2 向下转型和运行时类型识别
+
+- 向下转型：在继承层次中向下移动
+
+- 格式：子类类型 变量名 = (子类类型)父类变量名
+
+- 注意点
+
+  Java中，所有转型都会得到检查，如果异常会返回ClassCastException
+
+## 8.6 向上和向下转型
+
+- 格式
+
+  ```java
+  // 基类
+  class Father{}
+  
+  // 导出类
+  class Son extends Father{}
+  
+  // 向上转型
+  // 基类类型 变量名 = new 导出类类型
+  class Test{
+    public static void main(String[] args){
+      Father father = new Son();
+      father.smell(); //调用的是son的smell方法
+    }
+  }
+  
+  // 向下转型
+  // 导出类类型 变量名 = （导出类类型）基类变量名
+  class Test{
+    public static void main(String[] args){
+      Father fatherToSon = new Father();
+      Son son = (Son)fatherToSon;
+      son.laugh(); //如果laugh是son中新增的方法，则当前方法调用报错：ClassCastException
+    }
+  }
+  
+  
+  ```
