--- a/Thinking in Java/六.访问权限控制.md
+++ b/Thinking in Java/六.访问权限控制.md
@@ -162,6 +162,7 @@ public static void print(Object obj){
 - 注意点
   
   - 基类中一个private方法，如果在导出类中也有“相同名称的方法”，则不能称为覆盖，而是视为导出类中生成了新的方法
+  - 基类将无参构造器设置为private，则导出类将无法使用任何构造器
 
 ### 6.2.3 protected：继承访问权限
 
