--- a/Thinking in Java/八.多态.md
+++ b/Thinking in Java/八.多态.md
@@ -15,6 +15,8 @@
 
 - 忘记对象类型：**如果一个方法接收基类对象，那这个方法也能接收基类的导出类的对象——重点**
 
+  <!--举例：基类是哺乳动物，导出类是猴子和大熊猫，另一个不相关的类是农民。农民给动物喂食，只需要给哺乳动物传递信息，即可喂到猴子和大熊猫-->
+
 - 用途：降低代码的冗余 <!--比如一个方法能接收基类对象，所以基类导出类的对象都能被该方法接收，而不需要为每个基类导出类重写这个方法-->
 
 - 实现
@@ -266,6 +268,4 @@
       son.laugh(); //如果laugh是son中新增的方法，则当前方法调用报错：ClassCastException
     }
   }
-  
-  
   ```
