--- a/Thinking in Java/九.接口.md
+++ b/Thinking in Java/九.接口.md
@@ -19,6 +19,7 @@
   ```
 
 - 注意点
+  
   - 抽象类中接入接口，则继承抽象类的导出类同样需要实现接口
 
 ## 9.2 接口
@@ -60,15 +61,20 @@
 
   ![](/Users/toyz/Package/Note/Thinking in Java/assets/接口和抽象类的异同.png)
 
+## 9.3 完全解耦
 
+#### 1.策略设计模式
 
+- 定义：一个能够根据传递的参数对象的不同而具有不同行为的方法。
+- 策略：传入的参数对象
 
+#### 2.适配器设计模式
 
+- 定义：通过适配器类将接受接口，并返回需要的接口
+- 分类：类的适配器、对象的适配器
 
-
-
-
-
+- 类的适配器
+  1. 
 
 
 
