--- a/Thinking in Java/七.复用类.md
+++ b/Thinking in Java/七.复用类.md
@@ -83,7 +83,7 @@
   - 静态只能覆盖静态（基本没有人使用）
 - 注意点
   - 重载是看同名函数的参数列表
-  - 重写是子父类方法一模一样（包括返回值类型） <!--因为使用方法时，无法知道运行那个方法-->
+  - 重写是子父类方法一模一样（包括返回值类型，但返回值类型可以为其子类型） <!--因为使用方法时，无法知道运行那个方法-->
 
 <!--实现-->
 
@@ -198,12 +198,13 @@ public class Cleanser {
     public class ClassA {
         public ClassA() {
             System.out.println("ClassA Constructor");}}
+    ```
   ```
   
     ```java
     public class ClassB {
         public ClassB() {System.out.println("ClassB Constructor");}}
-    ```
+  ```
   
     ```java
     public class ClassC extends ClassA{
@@ -216,7 +217,7 @@ public class Cleanser {
     ClassA Constructor
     */
     ```
-    
+  
   - 如果基类中有带参数的构造器，没有默认的构造器，或者是想调用基类的含参构造器，需要使用super(参数)方法来调用基类的含参构造器，并放在构造器起始位置。
   
     <!--验证-->
